Fix scrollbar for dark theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,28 @@
   }
 }
 
+@media (prefers-color-scheme: light) {
+  ::selection {
+    background-color: #2e6b8cc0;
+    color: black;
+  }
+
+  ::-webkit-scrollbar {
+    display: block;
+    width: 14px;
+    background-color: white;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 10px 0 0 10px;
+    border: 2px solid #2e6b8c;
+    border-right: 0;
+    box-shadow: inset -1px 0px 8px rgba(2, 2, 2, 0.438);
+    width: 12px;
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
@@ -46,24 +68,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
-
-::selection {
-  background-color: #2e6b8cc0;
-  color: black;
-}
-
-::-webkit-scrollbar {
-  display: block;
-  width: 14px;
-  background-color: white;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: white;
-  border-radius: 10px 0 0 10px;
-  border: 2px solid #2e6b8c;
-  border-right: 0;
-  box-shadow: inset -1px 0px 8px rgba(2, 2, 2, 0.438);
-  width: 12px;
 }
